--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -103,9 +103,11 @@
   &:focus-visible {
     &:not(:disabled) {
       &:not(.icon-button--disabled) {
-        background: var(--background-active);
-        color: var(--text-secondary);
-        transition: color 0.25s ease, background-color 0.3s ease, opacity 0.25s ease;
+        &:not(.icon-button--no-hover) {
+          background: var(--background-active);
+          color: var(--text-secondary);
+          transition: color 0.25s ease, background-color 0.3s ease, opacity 0.25s ease;
+        }
       }
     }
   }
