--- a/src/assets/stylesheets/modules/assets.module.scss
+++ b/src/assets/stylesheets/modules/assets.module.scss
@@ -8,7 +8,14 @@
   height: 100%;
   justify-content: center;
   padding-bottom: 100px;
+  position: relative;
   width: 100%;
+
+  &__save {
+    position: absolute;
+    right: 15px;
+    top: 6px;
+  }
 }
 
 .asset,
@@ -33,8 +40,21 @@
     font-size: 14px;
     gap: 5px;
     height: max-content;
+    justify-content: space-between;
     min-height: 40px;
     padding-inline: 15px;
+  }
+
+  &__save {
+    background-color: var(--background-toolbar);
+    font-size: 16px;
+    font-weight: 500;
+
+    svg {
+      height: 20px;
+      min-width: 20px;
+      width: 20px;
+    }
   }
 
   &__image-container {
@@ -55,11 +75,11 @@
 
   &__download {
     align-items: center;
-    color: var(--text-tertiary);
     display: flex;
     font-size: 12px;
     font-weight: 600;
     gap: 10px;
+    margin-left: 10px;
 
     svg {
       height: 20px;
@@ -159,7 +179,7 @@
   display: grid;
   gap: 10px;
   max-width: 400px;
-  padding: 10px 5px;
+  padding: 10px 5px 30px;
 
   &__header {
     border-top: 1px solid var(--table-border-color);
