--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -137,3 +137,8 @@ button {
   background: var(--color-highlight);
   color: white;
 }
+
+.noselect {
+  user-select: none;
+  user-select: none;
+}
