--- a/src/assets/stylesheets/modules/mantine.module.scss
+++ b/src/assets/stylesheets/modules/mantine.module.scss
@@ -4,6 +4,7 @@
     border: 1px solid var(--background-secondary);
     box-shadow: 0 0 10px black;
     color: var(--text-primary);
+    z-index: 100;
   }
 
   &--modal {
