--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -527,39 +527,68 @@
 
 // Compositions
 
-.composition-clips {
-  height: 100%;
-  overflow-y: scroll;
-  padding: 10px;
+.clip-group {
+  width: 100%;
+
+  &--closed {
+    .clip-group__header {
+      border-bottom: 1px solid var(--table-border-color);
+    }
+
+    & + .clip-group {
+      .clip-group__header {
+        border-bottom: 0;
+      }
+    }
+  }
+
+  &__header {
+    align-items: center;
+    background-color: var(--background-toolbar);
+    display: flex;
+    gap: 10px;
+    padding: 10px 20px 10px 15px;
+    position: relative;
+    width: 100%;
+  }
+
+  &__header-icon {
+    height: 20px;
+    width: 20px;
+  }
+
+  &__title {
+    color: var(--text-primary);
+    font-size: 16px;
+    font-weight: 500;
+    gap: 10px;
+  }
+
+  &__header-indicator {
+    color: var(--text-tertiary);
+    position: absolute;
+    right: 10px;
+  }
+
+  &__clips {
+    animation: var(--animation-fadein) 0.5s ease;
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    padding: 20px 10px;
+    width: 100%;
+  }
 
   &__loader {
     height: 30px;
     margin-top: 60px;
     width: 100%;
   }
+}
 
-  &__title {
-    align-items: center;
-    color: var(--text-primary);
-    display: flex;
-    font-size: 18px;
-    font-weight: 500;
-    gap: 10px;
-    margin-bottom: 10px;
-
-    svg {
-      height: 25px;
-      width: 25px;
-    }
-  }
-
-  &__list {
-    display: grid;
-    gap: 5px;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    padding-bottom: 20px;
-    width: 100%;
-  }
+.composition-clips {
+  height: 100%;
+  overflow-y: scroll;
 
   &__drag-indicator {
     align-items: center;
