Primary content handling ; Deal with broken thumbnails

--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -62,6 +62,11 @@
       /* stylelint-disable-next-line no-important */
       opacity: 0.5!important;
     }
+
+    &--error {
+      background: black;
+      opacity: 0.5;
+    }
   }
 
   &__loader-image {
