--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -139,5 +139,7 @@ button {
 }
 
 .noselect {
-  user-select: none;
+  /* stylelint-disable-line */
+  -webkit-user-select: none!important;
+  user-select: none!important;
 }
