--- a/src/assets/stylesheets/modules/compositions.module.scss
+++ b/src/assets/stylesheets/modules/compositions.module.scss
@@ -190,8 +190,11 @@
   }
 
   &__actions {
+    align-items: center;
     display: flex;
+    gap: 10px;
     justify-content: flex-end;
+    margin-top: 10px;
   }
 }
 
