--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -359,6 +359,7 @@
   align-content: start;
   background-color: var(--background-toolbar);
   display: grid;
+  gap: 1px;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   height: 100%;
   max-width: 100%;
@@ -551,6 +552,12 @@
   &__header-icon {
     height: 20px;
     width: 20px;
+  }
+
+  &__header-color {
+    border-radius: 100%;
+    height: 8px;
+    width: 8px;
   }
 
   &__title {
