--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -1,20 +1,34 @@
+.browser-page {
+  padding: 20px 40px;
+
+  .tab {
+    &--inactive {
+      color: var(--text-tertiary);
+    }
+  }
+
+  .browser {
+    margin-top: 20px;
+  }
+}
+
 .browser {
-  --row-height: 60px;
+  --row-height: 55px;
 
   height: 100%;
   max-height: 100vh;
   min-height: 100vh;
   overflow-y: auto;
-  padding: 15px 100px 50px 50px;
+  padding: 5px;
   width: 100%;
 
   &__header {
     align-items: center;
     display: flex;
-    font-size: 24px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 600;
     gap: 10px;
-    margin: 15px 0;
+    margin: 15px 0 5px;
   }
 
   &__header-back {
@@ -57,6 +71,12 @@
     }
   }
 
+  &--my-library {
+    .browser-table__row {
+      grid-template-columns: 1fr 100px 200px;
+    }
+  }
+
   &__row {
     border-bottom: 1px solid var(--table-border-color);
     display: grid;
@@ -84,10 +104,18 @@
     }
   }
 
+  &__row-title {
+    max-width: 100%;
+    width: 100%;
+  }
+
   &__row-title-main {
-    align-items: center;
-    display: flex;
-    gap: 15px;
+    font-size: 16px;
+    max-width: calc(100% - 50px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: max-content;
   }
 
   &__row-title-id {
@@ -139,6 +167,17 @@
   &__message {
     font-size: 20px;
     font-weight: 500;
+  }
+
+  @media screen and (height <= 900px) {
+    --row-height: 50px;
+
+    min-height: calc(9 * var(--row-height));
+
+    &--loading,
+    &--empty {
+      min-height: calc(9 * var(--row-height));
+    }
   }
 }
 
