--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -110,7 +110,10 @@
   }
 
   &__row-title-main {
+    align-items: center;
+    display: flex;
     font-size: 16px;
+    gap: 10px;
     max-width: calc(100% - 50px);
     overflow: hidden;
     text-overflow: ellipsis;
@@ -169,6 +172,19 @@
     font-weight: 500;
   }
 
+  &__live-tag {
+    background-color: var(--background-toolbar);
+    border-radius: 3px;
+    color: var(--text-primary);
+    font-size: 12px;
+    font-weight: 800;
+    padding: 1px 8px;
+
+    &--active {
+      background-color: red;
+    }
+  }
+
   @media screen and (height <= 900px) {
     --row-height: 50px;
 
@@ -202,5 +218,45 @@
         opacity: 0;
       }
     }
+  }
+}
+
+.ltv-form-container {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  padding-bottom: 100px;
+  width: 100%;
+}
+
+.ltv-form {
+  border: 1px solid var(--table-border-color);
+  border-radius: 5px;
+  height: max-content;
+  padding: 30px;
+  width: 600px;
+
+  &__header {
+    align-items: center;
+    display: flex;
+    font-size: 20px;
+    font-weight: 500;
+    gap: 10px;
+  }
+
+  &__fields {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px 0;
+    width: 100%;
+  }
+
+  &__actions {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
   }
 }
