--- a/src/assets/stylesheets/modules/compositions.module.scss
+++ b/src/assets/stylesheets/modules/compositions.module.scss
@@ -62,6 +62,46 @@
     inset: 0;
     position: absolute;
   }
+
+  &__details {
+    background-color: rgb(0 0 0 / 60%);
+    border-radius: 0 5px 0 0;
+    bottom: 0;
+
+    /* TODO: Decide if we want this */
+    display: none;
+    font-size: 10px;
+    font-weight: 600;
+    height: 40px;
+    left: 0;
+    max-width: 400px;
+    padding: 5px 20px 5px 5px;
+    pointer-events: none;
+    position: absolute;
+    white-space: nowrap;
+    width: 100%;
+    z-index: 1;
+
+    * {
+      font-size: 10px;
+    }
+  }
+
+  &__details-name {
+    max-width: 100%;
+  }
+
+  &__tooltip-name {
+    font-weight: 500;
+    max-height: 200px;
+    max-width: 400px;
+    overflow: hidden;
+    white-space: pre-wrap;
+  }
+
+  &__tooltip-time {
+    opacity: 0.6;
+  }
 }
 
 .dragged-clip {
