--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -6,7 +6,7 @@
   --background-secondary: #1b1b1c;
   --background-active: #323233;
   --background-toolbar: #29292D;
-  --background-toolbar--active: #2C2C2F;
+  --background-toolbar--active: #2f2f33;
   --background-toolbar--highlight: #563e6c;
   --background-input: #1e1e1e;
   --background-input--active: #252525;
