--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -247,6 +247,20 @@
   width: 100%;
 }
 
+.tags {
+  position: relative;
+
+  &__loader {
+    animation: unset;
+    background-color: var(--background-primary);
+    inset: 0;
+    padding-bottom: 115px;
+    position: absolute;
+    top: 115px;
+    z-index: 1;
+  }
+}
+
 .tag {
   align-items: center;
   background-color: var(--background-tag);
@@ -286,6 +300,10 @@
     &:not(:hover) {
       border: 1px solid rgba(var(--rgb-color-highlight), 0.75);
     }
+  }
+
+  &--active {
+    background-color: var(--background-tag--hover);
   }
 
   &--selected {
@@ -350,6 +368,7 @@
     height: 100%;
     justify-content: center;
     padding: 10px 5px 10px 10px;
+    width: 55px;
   }
 
   &__action {
