--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -67,13 +67,13 @@
 
   &--composition {
     .browser-table__row {
-      grid-template-columns: 1fr 50px;
+      grid-template-columns: 1fr 100px 200px 100px;
     }
   }
 
   &--my-library {
     .browser-table__row {
-      grid-template-columns: 1fr 100px 200px;
+      grid-template-columns: 1fr 100px 200px 100px;
     }
   }
 
