--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -489,6 +489,20 @@
     position: absolute;
     z-index: 2;
   }
+
+  &__duration {
+    background-color: rgb(0 0 0 / 50%);
+    border-radius: 5px;
+    bottom: 10px;
+    color: var(--text-secondary);
+    font-size: 11px;
+    font-weight: 500;
+    padding: 3px 8px;
+    pointer-events: none;
+    position: absolute;
+    right: 10px;
+    z-index: 1;
+  }
 }
 
 .clip-time {
