--- a/src/assets/stylesheets/modules/shared.module.scss
+++ b/src/assets/stylesheets/modules/shared.module.scss
@@ -154,8 +154,11 @@
 
 .form {
   &__title {
+    align-items: center;
+    display: flex;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
+    gap: 5px;
     margin: 5px 0 10px;
   }
 
