--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -109,6 +109,7 @@
 
   &__row-title {
     max-width: 100%;
+    overflow: hidden;
     width: 100%;
   }
 
@@ -116,11 +117,10 @@
     align-items: center;
     display: flex;
     gap: 10px;
-    max-width: calc(100% - 50px);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: max-content;
+    width: 100%;
   }
 
   &__row-title-id {
