Allow adding custom search indexes

--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -63,6 +63,12 @@
     .browser-table__row {
       grid-template-columns: 1fr 100px 200px;
     }
+
+    &--no-duration {
+      .browser-table__row {
+        grid-template-columns: 1fr 200px;
+      }
+    }
   }
 
   &--composition {
