Add display metadata to assets

--- a/src/assets/stylesheets/modules/assets.module.scss
+++ b/src/assets/stylesheets/modules/assets.module.scss
@@ -45,6 +45,19 @@
     padding-inline: 15px;
   }
 
+  &__title-container {
+    align-items: center;
+    display: flex;
+    font-weight: 600;
+    gap: 10px;
+    max-width: calc(100% - 200px);
+  }
+
+  &__subtitle {
+    color: var(--text-tertiary);
+    font-size: 12px;
+  }
+
   &__save {
     background-color: var(--background-toolbar);
     font-size: 16px;
@@ -121,6 +134,35 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+  }
+
+  &__display-metadata {
+    display: grid;
+    gap: 5px;
+    margin: 30px 0 50px;
+
+    h2 {
+      font-size: 18px;
+      font-weight: 600;
+      margin-bottom: 5px;
+    }
+  }
+
+  &__metadata-field {
+    align-items: center;
+    display: flex;
+    font-size: 14px;
+    padding-bottom: 5px;
+
+    &:not(:last-child) {
+      border-bottom: 1px solid var(--table-border-color);
+    }
+
+    label  {
+      max-width: 200px;
+      min-width: 200px;
+      width: 200px;
+    }
   }
 }
 
