Composition browser fixes

--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -714,6 +714,14 @@
   }
 }
 
+.composition-browser-header {
+  align-items: center;
+  display: flex;
+  font-weight: 600;
+  gap: 10px;
+  padding: 5px 30px 0 15px;
+}
+
 .composition-browser {
   height: 100%;
   overflow-y: hidden;
@@ -758,6 +766,7 @@
   &__item {
     align-items: center;
     display: grid;
+    text-align: left;
     font-size: 14px;
     gap: 10px;
     grid-template-columns: 20px 2fr 1fr 30px;
