--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -99,8 +99,13 @@
     height: 20px;
     justify-content: center;
     width: 20px;
+
+    &--active {
+      color: var(--text-highlight);
+    }
   }
 
+  // Search index menu
   &__index-browser {
     max-height: 90vh;
     min-height: unset;
@@ -110,13 +115,19 @@
   }
 
   &__index-menu {
+    background-color: var(--background-secondary);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
     max-height: 400px;
     overflow-y: auto;
+    padding: 0 10px 10px;
     position: relative;
   }
 
   &__index-title {
-    background-color: var(--background-toolbar);
+    background-color: var(--background-secondary);
     box-shadow: 0 0 3px var(--background-primary);
     font-weight: 500;
     padding: 10px;
@@ -126,12 +137,13 @@
 
   &__index-option {
     align-items: center;
+    background-color: var(--background-toolbar);
+    border-radius: 5px;
     cursor: pointer;
     display: flex;
     font-size: 14px;
     gap: 10px;
     justify-content: space-between;
-    min-height: 45px;
     padding: 10px;
     text-align: left;
     transition: background-color 0.15s ease, color 0.15s ease;
@@ -165,6 +177,103 @@
   &__index-option-id {
     color: var(--text-secondary);
     font-size: 10px;
+  }
+
+  // Source selection menu
+
+  &__source-button {
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    display: flex;
+    font-size: 14px;
+    gap: 5px;
+    height: 35px;
+    justify-content: center;
+    margin-right: -5px;
+    padding: 5px;
+    transition: border 0.15s ease, color 0.15s ease;
+    width: 35px;
+
+    svg {
+      min-height: 20px;
+      min-width: 20px;
+    }
+
+    &--active {
+      border: 1px solid var(--text-tertiary);
+    }
+  }
+
+  &__source-menu {
+    background-color: var(--background-secondary);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    max-height: 400px;
+    overflow-y: auto;
+    padding: 0 10px 10px;
+    position: relative;
+  }
+
+  &__source-title {
+    box-shadow: 0 0 3px var(--background-primary);
+    font-weight: 500;
+    padding: 10px;
+    position: sticky;
+    top: 0;
+  }
+
+  &__source-option {
+    align-items: center;
+    background-color: var(--background-toolbar);
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    font-size: 14px;
+    gap: 10px;
+    overflow: hidden;
+    padding: 10px;
+    text-align: left;
+    transition: background-color 0.15s ease, color 0.15s ease;
+    width: 100%;
+
+    &:hover {
+      &:not(.search__source-option--active) {
+        background-color: var(--background-toolbar--active);
+      }
+    }
+
+    &--active {
+      background-color: var(--background-toolbar--highlight);
+    }
+  }
+
+  &__source-thumbnail {
+    min-width: 100px;
+  }
+
+  &__source-text {
+    max-width: 325px;
+  }
+
+  &__source-option-name {
+    color: var(--text-primary);
+    max-width: 290px;
+  }
+
+  &__source-option-id {
+    color: var(--text-secondary);
+    font-size: 10px;
+  }
+
+  &__source-browser {
+    max-height: 90vh;
+    min-height: unset;
+    padding: 40px 30px;
+
+    --row-height: 50px;
   }
 }
 
@@ -579,6 +688,7 @@
 // Compositions
 
 .clip-group {
+  animation: var(--animation-fadein) 0.5s ease;
   width: 100%;
 
   &--closed {
@@ -595,8 +705,10 @@
     display: flex;
     gap: 10px;
     padding: 10px 20px 10px 15px;
-    position: relative;
+    position: sticky;
+    top: 0;
     width: 100%;
+    z-index: 10;
   }
 
   &__header-icon {
@@ -636,6 +748,14 @@
     height: 30px;
     margin-top: 60px;
     width: 100%;
+  }
+
+  &__empty {
+    align-items: center;
+    display: flex;
+    font-weight: 600;
+    height: 100px;
+    justify-content: center;
   }
 }
 
