--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --color-highlight: #bc77ec;
+  --color-highlight: #BD6DFF;
   --rgb-color-highlight: 188, 118, 236;
   --color-highlight-secondary: #7787ec;
   --background-primary: #151515;
@@ -16,6 +16,7 @@
   --background-clip: #42423f;
   --background-clip--hover: #797974;
   --background-clip--selected: var(--color-highlight-secondary);
+  --background-form-button: #3c3c3c;
   --content-border-color: #222;
   --content-border-radius: 5px;
   --content-inline-padding: 20px;
