--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -43,6 +43,13 @@
     font-weight: 400;
     padding-top: 2px;
   }
+
+  &__actions {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+  }
 }
 
 .search-bar {
