--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -150,6 +150,42 @@
   }
 }
 
+.styled-button {
+  align-items: center;
+  border-radius: 5px;
+  display: flex;
+  font-weight: 600;
+  gap: 10px;
+  height: 40px;
+  justify-content: center;
+  min-width: 120px;
+  padding-inline: 25px;
+  transition: opacity 0.1s ease;
+
+  &:hover,
+  &:focus-visible {
+    opacity: 0.9;
+    transition: opacity 0.25s ease;
+  }
+
+  &--primary {
+    background-color: var(--button-color);
+    border: 1px solid var(--button-color);
+    color: var(--text-primary);
+  }
+
+  &--secondary {
+    background-color: var(--background-secondary);
+    border: 1px solid var(--button-color);
+    color: var(--button-color);
+  }
+
+  &__icon {
+    height: 20px;
+    width: 20px;
+  }
+}
+
 .copy-button {
   background-color: transparent!important;
   transition: color 0.1s ease;
