--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -395,7 +395,6 @@
   display: flex;
   gap: 15px;
   height: 70px;
-  justify-content: space-between;
   max-width: 100%;
   overflow: hidden;
   padding-left: 15px;
@@ -404,13 +403,8 @@
   transition: background-color 0.25s ease, border-color 0.15s ease;
   width: 100%;
 
-  &__left {
-    align-items: center;
-    border-radius: 5px;
-    display: flex;
-    gap: 15px;
-    height: 100%;
-    max-width: 100%;
+  &__content {
+    width: 100%;
   }
 
   &--thumbnail {
@@ -454,6 +448,7 @@
   &__image {
     background-color: black;
     height: 60px;
+    width: auto;
   }
 
   &__text {
@@ -809,6 +804,10 @@
   &__image {
     border-radius: 5px;
     margin-bottom: 5px;
+
+    &--loading {
+      pointer-events: none;
+    }
   }
 
   &__name {
