--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -29,6 +29,12 @@
     font-weight: 600;
     gap: 15px;
     margin: 15px 0 5px;
+
+    * {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
 
   &__header-back {
@@ -92,7 +98,7 @@
 
   &--ground-truth {
     .browser-table__row {
-      grid-template-columns: 1fr 200px;
+      grid-template-columns: 1fr 200px 50px;
     }
   }
 
