--- a/src/assets/stylesheets/modules/ground-truth.module.scss
+++ b/src/assets/stylesheets/modules/ground-truth.module.scss
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
   margin-top: 20px;
   max-height: calc(100% - 150px);
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-bottom: 100px;
   padding-right: 20px;
 }
@@ -54,15 +54,25 @@
   }
 
   &__title {
+    align-items: center;
+    display: flex;
     font-weight: 700;
+    gap: 5px;
     max-width: 230px;
     word-break: break-all;
   }
 
+  &__count {
+    color: var(--text-tertiary);
+    font-size: 12px;
+    padding-top: 2px;
+    white-space: nowrap;
+  }
+
   &__actions {
     * {
-    color: var(--text-tertiary);
-      }
+      color: var(--text-tertiary);
+    }
   }
 }
 
@@ -146,6 +156,12 @@
       height: 25px;
       width: 25px;
     }
+  }
+
+  &__error {
+    color: var(--text-error);
+    margin-top: 20px;
+    text-align: center;
   }
 }
 
