--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -20,6 +20,7 @@
   --content-border-color: #222;
   --content-border-radius: 5px;
   --content-inline-padding: 20px;
+  --color-border: #5C5B5F;
 
   /* Note: Gutter sizes are doubled due to resize handles */
   --gutter-size-x: 3px;
