--- a/src/assets/stylesheets/modules/ground-truth.module.scss
+++ b/src/assets/stylesheets/modules/ground-truth.module.scss
@@ -1,17 +1,36 @@
+.list-page {
+  border-top: 1px solid var(--color-border);
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 400px;
+  height: 100%;
+  margin-top: 20px;
+  max-height: calc(100vh - 250px);
+  overflow: hidden;
+}
+
 .entity-grid {
   display: grid;
   gap: 40px 20px;
   grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
   margin-top: 20px;
-  max-height: calc(100% - 150px);
+  max-height: 100%;
   overflow-y: auto;
   padding-bottom: 100px;
   padding-right: 20px;
+
+  &--empty {
+    display: flex;
+    font-size: 20px;
+    justify-content: center;
+    padding-top: 100px;
+  }
 }
 
 .entity-card {
   display: grid;
   gap: 10px;
+  height: max-content;
   position: relative;
 
   &__image-container {
@@ -76,6 +95,59 @@
   }
 }
 
+.details {
+  border: 1px solid var(--color-border);
+  border-radius: 5px;
+  color: var(--text-tertiary);
+  height: max-content;
+  margin-top: 20px;
+  padding: 20px 30px;
+  position: relative;
+
+  &__edit {
+    color: var(--text-tertiary);
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+
+  &__break {
+    margin: 25px 0;
+  }
+
+  &__header {
+    font-variant: all-small-caps;
+    margin-bottom: 10px;
+  }
+
+  &__title {
+    color: var(--text-secondary);
+    font-size: 20px;
+  }
+
+  &__subtitle {
+    color: var(--text-secondary);
+    font-size: 16px;
+  }
+
+  &__text {
+    font-size: 14px;
+  }
+
+  &__indent {
+    margin-left: 15px;
+  }
+
+  &__field {
+    align-items: center;
+    color: var(--text-secondary);
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    margin-top: 5px;
+  }
+}
+
 .asset-page {
   padding-top: 0;
 
@@ -102,7 +174,9 @@
 .ground-truth-form {
   display: grid;
   gap: 10px;
+  max-height: 80vh;
   padding-right: 20px;
+  position: relative;
 
   &__header {
     align-items: center;
@@ -113,10 +187,15 @@
 
   &__actions {
     align-items: center;
+    background-color: var(--background-modal);
+    bottom: 0;
     display: flex;
     gap: 10px;
     justify-content: flex-end;
     padding: 20px 0;
+    position: sticky;
+    width: 100%;
+    z-index: 2;
   }
 
   &__browser {
@@ -130,14 +209,6 @@
   &__attributes {
     display: grid;
     gap: 10px;
-  }
-
-  &__attribute-drag-indicator {
-    background-color: red;
-    box-shadow: 0 0 10px red;
-    box-shadow: 0 0 3px var(--text-highlight);
-    height: 0;
-    width: 100%;
   }
 
   &__add-attribute {
@@ -174,12 +245,34 @@
   padding: 10px;
   width: 100%;
 
+  &--dragging {
+    .attribute-form__inputs {
+      display: none;
+    }
+
+    .attribute-form__actions--right {
+      display: none;
+    }
+  }
+
+  &:not(.attribute-form--dragging) {
+    .attribute-form__dragging-name {
+      display: none;
+    }
+  }
+
   &--indicator-before {
     border-top: 1px solid var(--color-highlight);
   }
 
   &--indicator-after {
     border-bottom: 1px solid var(--color-highlight);
+  }
+
+  &__dragging-name {
+    color: var(--text-secondary);
+    font-size: 16px;
+    font-weight: 600;
   }
 
   &__inputs {
